--- a/style/less/interactive.less
+++ b/style/less/interactive.less
@@ -181,10 +181,17 @@
   }
   &__box {
     position: relative;
-    padding-top: 43%;
-    width: 61%;
-    margin:  14% auto 0;
+    padding-top: 24%;
+    width: 41%;
+    margin: 14% auto 0;
+    opacity: 0;
+    transition: opacity 2s;
+    &--open {
+      opacity: 1;
+    }
+
   }
+
   &__depiction {
     font-family: "Avenir Regular", sans-serif;
     font-style: normal;
@@ -193,7 +200,8 @@
     line-height: 23px;
     text-align: center;
     color: #000000;
-    margin-bottom: 85px;
+    width: 79%;
+    margin: 0 auto 85px;
   }
   &__social {
     align-items: center;
@@ -202,17 +210,20 @@
     margin: 0 auto;
     border-top: 1px solid #CBCBCB;
     padding-top: 63px;
-    padding-bottom: 95px;
+    padding-bottom: 34px;
     &--link {
       display: block;
       position: relative;
+      & img {
+        width: 43%;
+      }
       &:not(:last-child):before {
         content: "";
         position: absolute;
         width: 1px;
-        height: 93px;
-        top: -20px;
-        right: -135%;
+        height: 40px;
+        top: -8px;
+        right: -14%;
         background: #CBCBCB;
 
       }
@@ -236,10 +247,11 @@
     &--image {
       display: block;
       position: absolute;
-      top: -14%;
+      top: -25%;
       left: 0;
       right: 0;
       margin: 0 auto;
+      width: 82%;
     }
     &--open {
       display: block;
@@ -318,15 +330,16 @@
   right: 10px;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
   .interactive__social--link:not(:last-child):before {
-    top: -20px;
-    right: -88%;
+    right: 0;
   }
+
   .interactive__info--image {
     width: 72%;
   }
 }
+
 @media screen and (max-width: 990px) {
   .interactive__question {
     width: 90%;
@@ -336,9 +349,11 @@
   .modal {
     padding: 5% 3%;
   }
+
   .interactive__info--image {
     width: 53%;
   }
+
   .interactive__box {
     width: 67%;
   }
@@ -348,11 +363,9 @@
   .interactive__wrap {
     position: static;
   }
+
   .interactive__box {
     width: 90%;
-  }
-  .interactive__social--link:not(:last-child):before {
-    right: -50%;
   }
 
   .interactive .interactive__row {
@@ -386,39 +399,46 @@
   .interactive__farther {
     width: 225px;
   }
+
   .interactive__info--image {
-    width: 83%;
+    width: 40%;
     position: static;
   }
+
   .interactive__box {
     margin-top: 13%;
     padding-top: 35px;
   }
+
   .interactive__name {
     font-size: 52px;
     line-height: 60px;
   }
 
-    .interactive__result {
-      font-size: 38px;
-      line-height: 48px;
-      margin-bottom: 12px;
-    }
+  .interactive__result {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 12px;
+  }
+
   .interactive__depiction {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 30px;
   }
+
   .interactive__social {
     padding-top: 30px;
     padding-bottom: 30px;
   }
 }
-@media screen and (max-width: 576px){
+
+@media screen and (max-width: 576px) {
   .interactive__social--link:not(:last-child):before {
     display: none;
   }
-  .interactive__social--link img{
+
+  .interactive__social--link img {
     width: 55%;
   }
 }
