--- a/style/less/style.less
+++ b/style/less/style.less
@@ -1240,6 +1240,9 @@ body {
 }
 
 @media screen and (max-width: 990px) {
+  .scroll {
+    overflow-y: auto;
+  }
   .header__link {
     padding: 0 9px;
   }
