--- a/style/less/style.less
+++ b/style/less/style.less
@@ -1472,7 +1472,7 @@ body {
   }
 
   .main__text {
-    width: 100%;
+    width: 94%;
   }
 
   .main__wrap {
@@ -1563,7 +1563,9 @@ body {
   .content-container {
     width: 100%;
   }
-
+  .main__signature {
+    font-size: 8px;
+  }
   .header__heading {
     display: flex;
   }
