--- a/style/less/contemporary.less
+++ b/style/less/contemporary.less
@@ -1435,4 +1435,7 @@
   .contemporary .contemporary__panel--inner {
     width: 97%;
   }
+  .contemporary__slider--wrap:after {
+   display: none;
+  }
 }
