--- a/style/less/style.less
+++ b/style/less/style.less
@@ -281,6 +281,7 @@ body {
       z-index: 99;
       overflow-y: auto;
       height: calc(100vh - 38px);
+      padding-bottom: 50px;
     }
   }
   &__close {
