add test other pages

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -281,7 +281,7 @@ body {
       z-index: 99;
       overflow-y: auto;
       height: calc(100vh - 38px);
-      padding-bottom: 50px;
+
     }
   }
   &__close {
@@ -512,6 +512,9 @@ body {
     background: #FFFFFF;
     margin: 0 auto;
     padding: 15px 0;
+    &--mobile{
+      padding-bottom: 60px;
+    }
   }
   &__list {
     align-items: center;
